Improve parse error handling in compile-testing
RELNOTES=Improve parse error handling
PiperOrigin-RevId: 592691296