@@ -251,6 +251,9 @@
           --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
           --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
           --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
         </test.jvm.flags>
       </properties>
     </profile>
